--- a/splitLandgingPage/style.css
+++ b/splitLandgingPage/style.css
@@ -1,43 +1,42 @@
-
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-h1{
+h1 {
     font-size: 4rem;
     color: #fff;
     position: absolute;
     left: 50%;
     top: 20%;
-    transform:translateX(-50%) ;
-    white-space:nowrap;
+    transform: translateX(-50%);
+    white-space: nowrap;
 }
 
-:root{
-    --left-bg-color:rgba(87,84,236,0.5);
-    --right-bg-color:rgba(43,43,43,0.7);
-    --left-btn-hover-color:rgba(87,84,236,1);
-    --right-btn-hover-color:rgba(43,43,43,0.7);
-    --hover-width:75%;
-    --hover-other:25%;
+:root {
+    --left-bg-color: rgba(87, 84, 236, 0.5);
+    --right-bg-color: rgba(43, 43, 43, 0.7);
+    --left-btn-hover-color: rgba(87, 84, 236, 1);
+    --right-btn-hover-color: rgba(43, 43, 43, 0.7);
+    --hover-width: 75%;
+    --hover-other: 25%;
 }
 
-body{
+body {
     height: 100vh;
     overflow: hidden;
     color: pink;
 }
 
-.container{
+.container {
     position: relative;
     height: 100%;
     width: 100%;
     background-color: #333;
 }
 
-.btn{
+.btn {
     position: absolute;
     display: flex;
     justify-content: center;
@@ -54,28 +53,28 @@ body{
     padding: 1.5rem;
 }
 
-.split{
+.split {
     position: absolute;
     width: 50%;
     height: 100%;
     overflow: hidden;
 }
 
-.split.left{
+.split.left {
     left: 0;
     background: url('img/playstation1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;   
+    background-position: center center;
 }
 
-.split.left .btn:hover{
+.split.left .btn:hover {
     background-color: var(--left-btn-hover-color);
     border-color: var(--left-btn-hover-color);
     cursor: pointer;
 }
 
-.split.left::before{
+.split.left::before {
     content: '';
     position: absolute;
     width: 100%;
@@ -83,22 +82,22 @@ body{
     background-color: var(--left-bg-color);
 }
 
-.split.right{
+.split.right {
     right: 0;
     background: url('img/Xbox2.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    
+
 }
 
-.split.right .btn:hover{
+.split.right .btn:hover {
     background-color: var(--right-btn-hover-color);
     border-color: var(--right-btn-hover-color);
     cursor: pointer;
 }
 
-.split.right::before{
+.split.right::before {
     content: '';
     position: absolute;
     width: 100%;
@@ -110,35 +109,107 @@ body{
 .split.right,
 .split.left,
 .split.right::before,
-.split.left::before{
+.split.left::before {
     transition: all 1000ms ease-in-out;
 }
 
-.hover-left .left{
+.hover-left .left {
     width: var(--hover-width);
 }
 
-.hover-left .right{
+.hover-left .right {
     width: var(--hover-other);
 }
 
-.hover-right .right{
+.hover-right .right {
     width: var(--hover-width);
 }
 
-.hover-right .left{
+.hover-right .left {
     width: var(--hover-other);
 }
 
 @media (max-width:800px) {
-    
-    h1{
+
+    h1 {
         font-size: 2rem;
         top: 30%;
     }
 
-    .btn{
+    .btn {
         padding: 1.2rem;
         width: 12rem;
     }
 }
+
+@media(max-width:450px) {
+
+
+    .container {
+        display: flex;
+        flex-direction: column !important;
+        position: relative;
+    }
+
+    .split {
+        width: 100%;
+        height: 50vh;
+    }
+
+    .split.right {
+        position: absolute;
+        bottom: 0;
+    }
+
+    .hover-left .left {
+        height: var(--hover-width);
+        width: 100%;
+    }
+
+    .hover-left .right {
+        height: var(--hover-other);
+        width: 100%;
+    }
+
+    .hover-right .right {
+        height: var(--hover-width);
+        width: 100%;
+
+    }
+
+    .hover-right .left {
+        height: var(--hover-other);
+        width: 100%;
+
+    }
+
+    .btn{
+        position: relative;
+    }
+
+    h1{
+        position: absolute;
+        top: 23%;
+    }
+
+    .hover-right .left .btn{
+        opacity: 0;
+        transition: opacity 1s ease-out;
+    }
+
+    .hover-right .right .btn{
+        transition: opacity 2.5s ease-out;
+    }
+
+    .hover-left .right .btn{
+        opacity: 0;
+        transition: opacity 1s ease-out;
+    }
+
+    .hover-left .left .btn{
+        transition: opacity 2.5s ease-out;
+    }
+
+}
+
+
